--- a/change.ini
+++ b/change.ini
@@ -45,9 +45,8 @@
   custom_proxy_group=🎮 Niantic`select`[]DIRECT`(香港|HK|日本|台湾|TW|JP|新加坡|SG)`[]🚀 节点选择`.*
   custom_proxy_group=🐲 StreamLink`select`(778117a1|香港|HK|日本|JP|新加坡)`[]🚀 节点选择`[]DIRECT`.*
   custom_proxy_group=🇭🇰 HongKong`select`(香港|HK|HongKong)`[]🚀 节点选择`[]DIRECT`.*
-  custom_proxy_group=🇭🇰 HK2`select`(778117a1|香港|HK|HongKong)`[]🚀 节点选择`[]DIRECT`.*
+  custom_proxy_group=🇭🇰 HK2`select`[]♻️ CloudFlare`(778117a1|香港|HK|HongKong)`[]🚀 节点选择`[]DIRECT`.*
   custom_proxy_group=🇭🇰 Now`select`(香港|HK|HongKong|778117a1)`[]🚀 节点选择`[]DIRECT`.*
-  custom_proxy_group=🇭🇰 Viu`select`(香港|HK|HongKong|778117a1)`[]🚀 节点选择`[]DIRECT`.*
   custom_proxy_group=📺 Taiwan`select`(台湾|TW|Taiwan)`[]🚀 节点选择`[]DIRECT`.*
   custom_proxy_group=🦴 Gemini`select`(台湾|TW|Taiwan)`[]🚀 节点选择`[]DIRECT`.*
   custom_proxy_group=🇯🇵 JP`select`(日本|JP|Japan)`[]🚀 节点选择`[]DIRECT`.*
@@ -60,6 +59,7 @@
   custom_proxy_group=🚡 下载`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`.*
   custom_proxy_group=Ⓜ️ 微软服务`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`.*
   custom_proxy_group=Ⓜ️ 微软云盘`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`.*
+  custom_proxy_group=♻️ CloudFlare`url-test`(-HTTP-|-HTTPS-)`http://www.gstatic.com/generate_204`300
   custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300
 
   enable_rule_generator: true
