--- a/change.ini
+++ b/change.ini
@@ -6,7 +6,7 @@
   ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,services.googleapis.cn
   ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCNProxyIP.list
   ruleset=🇭🇰 HongKong,https://raw.githubusercontent.com/ionull/change/main/hk.list?v=7
-  ruleset=🇭🇰 HK2,https://raw.githubusercontent.com/ionull/change/main/hk2.list?v=7
+  ruleset=🌍 GlobalStream,https://raw.githubusercontent.com/ionull/change/main/global-stream.list
   ruleset=🇭🇰 Now,https://raw.githubusercontent.com/ionull/change/main/now.list?v=7
   ruleset=📺 Taiwan,https://raw.githubusercontent.com/ionull/change/main/tw.list?v=2
   ruleset=🦴 Gemini,https://raw.githubusercontent.com/ionull/change/main/gemini.list?v=1
@@ -43,15 +43,15 @@
 
   custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]♻️ CloudFlare`(778117a1|香港|日本|台湾|美国|新加坡|韩国)`[]DIRECT`.*
   custom_proxy_group=🎮 Niantic`select`[]DIRECT`(香港|HK|日本|台湾|TW|JP|新加坡|SG)`[]🚀 节点选择`.*
-  custom_proxy_group=🐲 StreamLink`select`(778117a1|香港|HK|日本|JP|新加坡)`[]🚀 节点选择`[]DIRECT`.*
+  custom_proxy_group=🐲 StreamLink`select`[]♻️ CloudFlare`(778117a1|香港|HK|日本|JP|新加坡)`[]🚀 节点选择`[]DIRECT`.*
   custom_proxy_group=🇭🇰 HongKong`select`(香港|HK|HongKong)`[]🚀 节点选择`[]DIRECT`.*
-  custom_proxy_group=🇭🇰 HK2`select`[]♻️ CloudFlare`(778117a1|香港|HK|HongKong)`[]🚀 节点选择`[]DIRECT`.*
+  custom_proxy_group=🌍 GlobalStream`select`[]♻️ CloudFlare`(778117a1|香港|HK|HongKong)`[]🚀 节点选择`[]DIRECT`.*
   custom_proxy_group=🇭🇰 Now`select`(香港|HK|HongKong|778117a1)`[]🚀 节点选择`[]DIRECT`.*
   custom_proxy_group=📺 Taiwan`select`(台湾|TW|Taiwan)`[]🚀 节点选择`[]DIRECT`.*
   custom_proxy_group=🦴 Gemini`select`(台湾|TW|Taiwan)`[]🚀 节点选择`[]DIRECT`.*
   custom_proxy_group=🇯🇵 JP`select`(日本|JP|Japan)`[]🚀 节点选择`[]DIRECT`.*
   custom_proxy_group=💰 BN`select`[]DIRECT`(香港|HK|HongKong)`[]🚀 节点选择`.*
-  custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`(778117a1)`[]♻️ 自动选择`[]DIRECT`.*
+  custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`(778117a1)`[]♻️ CloudFlare`[]♻️ 自动选择`[]DIRECT`.*
   custom_proxy_group=📱 Telegram`select`[]🚀 节点选择`[]♻️ 自动选择`[]DIRECT`.*
   custom_proxy_group=🎬 EMBY`select`[]🚀 节点选择`[]♻️ 自动选择`[]DIRECT`.*
   custom_proxy_group=💬 OpenAi`select`(778117a1|日本|台湾|美国|新加坡|韩国)`[]🚀 节点选择`[]DIRECT`.*
