--- a/change.ini
+++ b/change.ini
@@ -48,8 +48,8 @@
   custom_proxy_group=🇭🇰 HongKong`select`(香港|HK|HongKong)`[]🚀 节点选择`[]DIRECT`.*
   custom_proxy_group=🇭🇰 Now`select`(香港|HK|HongKong|778117a1)`[]🚀 节点选择`[]DIRECT`.*
   custom_proxy_group=🌍 GlobalStream`select`[]♻️ CloudFlare`(778117a1|香港|HK|HongKong)`[]🚀 节点选择`[]DIRECT`.*
-  custom_proxy_group=🌍 TWStream`select`[]♻️ CloudFlare`(778117a1|香港|HK|HongKong)`[]🚀 节点选择`[]DIRECT`.*
-  custom_proxy_group=📺 Taiwan`select`(台湾|TW|Taiwan)`[]🚀 节点选择`[]DIRECT`.*
+  custom_proxy_group=🌍 TWStream`select`[]♻️ CloudFlare`(b38531a3|778117a1|香港|HK|HongKong)`[]🚀 节点选择`[]DIRECT`.*
+  custom_proxy_group=📺 Taiwan`select`[]♻️ TWAuto`(台湾|TW|Taiwan)`[]🚀 节点选择`[]DIRECT`.*
   custom_proxy_group=🦴 Gemini`select`(台湾|TW|Taiwan)`[]🚀 节点选择`[]DIRECT`.*
   custom_proxy_group=🇯🇵 JP`select`(日本|JP|Japan)`[]🚀 节点选择`[]DIRECT`.*
   custom_proxy_group=💰 BN`select`[]DIRECT`(香港|HK|HongKong)`[]🚀 节点选择`.*
@@ -61,6 +61,7 @@
   custom_proxy_group=🚡 下载`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`.*
   custom_proxy_group=Ⓜ️ 微软服务`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`.*
   custom_proxy_group=Ⓜ️ 微软云盘`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`.*
+  custom_proxy_group=♻️ TWAuto`url-test`(台湾-01|台湾-02)`http://www.gstatic.com/generate_204`300
   custom_proxy_group=♻️ CloudFlare`url-test`(-HTTP-|-HTTPS-)`http://www.gstatic.com/generate_204`300
   custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300
 
