--- a/mini.ini
+++ b/mini.ini
@@ -9,6 +9,7 @@
 ;增强中国IP段：不支持
 ;增强国外GFW：不支持
 
+ruleset=🎮 Niantic,https://raw.githubusercontent.com/kedaxia/oplist/refs/heads/main/niantic.list
 ruleset=🎯 全球直连,rules/ACL4SSR/Clash/LocalAreaNetwork.list
 ruleset=🛑 全球拦截,rules/ACL4SSR/Clash/BanAD.list
 ruleset=🛑 全球拦截,rules/ACL4SSR/Clash/BanProgramAD.list
@@ -24,10 +25,13 @@ ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]DIRECT`.*
+custom_proxy_group=🎮 Niantic`select`[]DIRECT`(星空)`[]🚀 节点选择`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
 custom_proxy_group=🛑 全球拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`.*
+custom_proxy_group=♻️ CloudFlare`url-test`(-HTTP-|-HTTPS-)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=♻️ 星空`url-test`(dskjahf.xyz)`http://www.gstatic.com/generate_204`300
 
 enable_rule_generator=true
 overwrite_original_rules=true
