--- a/mini.ini
+++ b/mini.ini
@@ -10,8 +10,7 @@
 ;增强国外GFW：不支持
 
 ruleset=🎮 Niantic,DOMAIN-KEYWORD,nianticlabs,🎮 Niantic
-ruleset=♻️ 星空,DOMAIN-KEYWORD,dskjahf,♻️ 星空
-ruleset=♻️ ss,DOMAIN-KEYWORD,kedx.org,♻️ ss
+ruleset=📹 油管视频,https://github.com/kedaxia/oplist/raw/refs/heads/main/yt.list
 ruleset=🎯 全球直连,rules/ACL4SSR/Clash/LocalAreaNetwork.list
 ruleset=🛑 全球拦截,rules/ACL4SSR/Clash/BanAD.list
 ruleset=🛑 全球拦截,rules/ACL4SSR/Clash/BanProgramAD.list
@@ -27,13 +26,14 @@ ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]DIRECT`.*
-custom_proxy_group=🎮 Niantic`select`[]♻️ 星空`.*
+custom_proxy_group=🎮 Niantic`select`[]♻️ 星空
+custom_proxy_group=📹 油管视频`select`[]♻️ ss`[]🚀 节点选择`[]♻️ 自动选择`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
 custom_proxy_group=🛑 全球拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`.*
 custom_proxy_group=♻️ 星空`url-test`(台湾|新加坡|日本|美国)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=♻️ ss`url-test`(778117a1)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=♻️ ss`url-test`(778117a1)`.*
 
 enable_rule_generator=true
 overwrite_original_rules=true
