--- a/mini.ini
+++ b/mini.ini
@@ -25,7 +25,7 @@ ruleset=🎯 全球直连,rules/ACL4SSR/Clash/ChinaCompanyIp.list
 ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 
-custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]DIRECT`.*
+custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]♻️ ss`[]♻️ CloudFlare`[]♻️ 星空`DIRECT`.*
 custom_proxy_group=🎮 Niantic`select`[]♻️ 星空
 custom_proxy_group=📹 油管视频`select`[]♻️ ss`[]🚀 节点选择`[]♻️ CloudFlare
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
