--- a/mini.ini
+++ b/mini.ini
@@ -37,7 +37,7 @@ custom_proxy_group=🛑 全球拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`.*
 custom_proxy_group=♻️ 星空`select`(台湾|新加坡|日本|美国)
 custom_proxy_group=♻️ CloudFlare`url-test`(-HTTP-|-HTTPS-)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=♻️ ss`url-test`(778117a1)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=♻️ ss`select`(778117a1)
 
 enable_rule_generator=true
 overwrite_original_rules=true
