--- a/mini.ini
+++ b/mini.ini
@@ -32,16 +32,16 @@ ruleset=🎯 全球直连,https://github.com/ACL4SSR/ACL4SSR/raw/refs/heads/mast
 ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 
-custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]♻️ ss`[]♻️ CloudFlare`[]♻️ 星空`DIRECT`.*
-custom_proxy_group=🎮 Niantic`select`[]♻️ 星空
-custom_proxy_group=📹 油管视频`select`[]♻️ ss`[]🚀 节点选择`[]♻️ CloudFlare`[]♻️ 星空`[]♻️ 自动选择
-custom_proxy_group=📱 Telegram`select`[]♻️ ss`[]🚀 节点选择`[]♻️ CloudFlare`[]♻️ 星空`[]♻️ 自动选择
-custom_proxy_group=💬 OpenAi`select`(778117a1)`[]♻️ CloudFlare`[]♻️ 星空`[]♻️ 自动选择
+custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]♻️ ss`[]♻️ CloudFlare`[]♻️ 星辰`DIRECT`.*
+custom_proxy_group=🎮 Niantic`select`[]♻️ 星辰
+custom_proxy_group=📹 油管视频`select`[]♻️ ss`[]🚀 节点选择`[]♻️ CloudFlare`[]♻️ 星辰`[]♻️ 自动选择
+custom_proxy_group=📱 Telegram`select`[]♻️ ss`[]🚀 节点选择`[]♻️ CloudFlare`[]♻️ 星辰`[]♻️ 自动选择
+custom_proxy_group=💬 OpenAi`select`(778117a1)`[]♻️ CloudFlare`[]♻️ 星辰`[]♻️ 自动选择
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
 custom_proxy_group=🛑 全球拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`.*
-custom_proxy_group=♻️ 星空`select`(台湾|新加坡|日本|美国)
+custom_proxy_group=♻️ 星辰`select`(台湾|新加坡|日本|美国)
 custom_proxy_group=♻️ CloudFlare`url-test`(-HTTP-|-HTTPS-)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=♻️ ss`select`(778117a1)
 
