--- a/mini.ini
+++ b/mini.ini
@@ -41,7 +41,7 @@ custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/genera
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
 custom_proxy_group=🛑 全球拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`[]♻️ ss`[]♻️ CloudFlare`[]♻️ 星辰
-custom_proxy_group=♻️ 星辰`select`(台湾|新加坡|日本|美国)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=♻️ 星辰`url-test`(台湾|新加坡|日本|美国)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=♻️ CloudFlare`url-test`(-HTTP-|-HTTPS-)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=♻️ ss`select`(778117a1)
 
