--- a/mini.ini
+++ b/mini.ini
@@ -11,10 +11,10 @@
 
 
 ruleset=🎮 Niantic,https://github.com/kedaxia/oplist/raw/refs/heads/main/niantic.list
-ruleset=🎮 Niantic,https://github.com/kedaxia/oplist/raw/refs/heads/main/other.list
 ruleset=📹 油管视频,https://github.com/kedaxia/oplist/raw/refs/heads/main/yt.list
 ruleset=📱 Telegram,https://raw.githubusercontent.com/Jameshan-112/change/main/tg.list
 ruleset=💬 OpenAi,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/OpenAi.list
+ruleset=🚀 节点选择,https://github.com/kedaxia/oplist/raw/refs/heads/main/other.list
 ruleset=🚀 节点选择,https://github.com/kedaxia/oplist/raw/refs/heads/main/tg.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyLite.list
