--- a/mini.ini
+++ b/mini.ini
@@ -34,7 +34,7 @@ ruleset=🛑 全球拦截,https://github.com/ACL4SSR/ACL4SSR/blob/master/Clash/B
 ruleset=🐟 漏网之鱼,[]FINAL
 
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]♻️ ss`[]♻️ CloudFlare`[]♻️ 星辰`DIRECT`.*
-custom_proxy_group=🎮 Niantic`select`[]♻️ 星辰`(台湾|新加坡|日本|美国)
+custom_proxy_group=🎮 Niantic`url-test`[]♻️ 星辰`(直连|台湾 1|台湾 test1|台湾 2|日本)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=📹 油管视频`select`[]♻️ ss`[]🚀 节点选择`[]♻️ CloudFlare`[]♻️ 星辰`[]♻️ 自动选择
 custom_proxy_group=📱 Telegram`select`[]♻️ ss`[]🚀 节点选择`[]♻️ CloudFlare`[]♻️ 星辰`[]♻️ 自动选择
 custom_proxy_group=💬 OpenAi`select`(d4441c9f)`[]♻️ CloudFlare`[]♻️ 星辰`[]♻️ 自动选择
@@ -42,7 +42,7 @@ custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/genera
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
 custom_proxy_group=🛑 全球拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`[]♻️ ss`[]♻️ CloudFlare`[]♻️ 星辰
-custom_proxy_group=♻️ 星辰`url-test`(台湾|新加坡|日本|美国)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=♻️ 星辰`select`(IEPL|直连|台湾|日本)
 custom_proxy_group=♻️ CloudFlare`url-test`(-HTTP-|-HTTPS-)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=♻️ ss`select`(d4441c9f)
 
