--- a/mini.ini
+++ b/mini.ini
@@ -36,7 +36,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]♻️ ss`[]♻️ CloudFlare`[]♻️ 星辰`DIRECT`.*
 custom_proxy_group=🎮 Niantic`url-test`(直连|台湾 test1)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=📹 油管视频`select`[]♻️ ss`[]🚀 节点选择`[]♻️ CloudFlare`[]♻️ 星辰`[]♻️ 自动选择
+custom_proxy_group=📹 油管视频`select`(d4441c9f)`[]♻️ ss`[]🚀 节点选择`[]♻️ CloudFlare`[]♻️ 星辰`[]♻️ 自动选择
 custom_proxy_group=📱 Telegram`select`[]♻️ ss`[]🚀 节点选择`[]♻️ CloudFlare`[]♻️ 星辰`[]♻️ 自动选择
 custom_proxy_group=💬 OpenAi`select`(d4441c9f)`[]♻️ CloudFlare`[]♻️ 星辰`[]♻️ 自动选择
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
@@ -45,7 +45,7 @@ custom_proxy_group=🛑 全球拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`[]♻️ ss`[]♻️ CloudFlare`[]♻️ 星辰
 custom_proxy_group=♻️ 星辰`select`(IEPL|直连|台湾|日本)
 custom_proxy_group=♻️ CloudFlare`url-test`(-HTTP-|-HTTPS-)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=♻️ ss`select`(d4441c9f)
+custom_proxy_group=♻️ ss`url-test`(d4441c9f)`http://www.gstatic.com/generate_204`300
 
 enable_rule_generator=true
 overwrite_original_rules=true
