--- a/mini.ini
+++ b/mini.ini
@@ -14,6 +14,7 @@ ruleset=🎮 Niantic,https://github.com/kedaxia/oplist/raw/refs/heads/main/niant
 ruleset=📹 油管视频,https://github.com/kedaxia/oplist/raw/refs/heads/main/yt.list
 ruleset=📱 Telegram,https://raw.githubusercontent.com/Jameshan-112/change/main/tg.list
 ruleset=💬 OpenAi,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/OpenAi.list
+OpenAi,https://github.com/kedaxia/oplist/raw/refs/heads/main/ssl.list
 ruleset=🚀 节点选择,https://github.com/kedaxia/oplist/raw/refs/heads/main/other.list
 ruleset=🚀 节点选择,https://github.com/kedaxia/oplist/raw/refs/heads/main/tg.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
