--- a/mini.ini
+++ b/mini.ini
@@ -14,8 +14,8 @@ ruleset=🎮 Niantic,https://raw.githubusercontent.com/kedaxia/oplist/refs/heads
 ruleset=📹 油管视频,https://raw.githubusercontent.com/kedaxia/oplist/refs/heads/main/yt.list
 ruleset=📱 Telegram,https://raw.githubusercontent.com/Jameshan-112/change/main/tg.list
 ruleset=💬 OpenAi,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/OpenAi.list
+ruleset=💬 OpenAi,https://raw.githubusercontent.com/kedaxia/oplist/refs/heads/main/other.list
 ruleset=💬 OpenAi,https://raw.githubusercontent.com/kedaxia/oplist/refs/heads/main/ssl.list
-ruleset=🚀 节点选择,https://raw.githubusercontent.com/kedaxia/oplist/refs/heads/main/other.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/kedaxia/oplist/refs/heads/main/tg.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyLite.list
