--- a/mini.ini
+++ b/mini.ini
@@ -45,7 +45,7 @@ custom_proxy_group=🛑 全球拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`[]♻️ ss`[]♻️ CloudFlare`[]♻️ 星辰
 custom_proxy_group=♻️ 星辰`url-test`(IEPL|直连|台湾|日本)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=♻️ CloudFlare`url-test`(-HTTP-|-HTTPS-)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=♻️ ss`url-test`(d4441c9f)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=♻️ ss`select`(d4441c9f)`
 
 enable_rule_generator=true
 overwrite_original_rules=true
