--- a/mini.ini
+++ b/mini.ini
@@ -29,7 +29,7 @@ ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]♻️ ss`[]🎮 Niantic`[]♻️ CloudFlare`[]♻️ 星辰`DIRECT`.*
-custom_proxy_group=🎮 Niantic`url-test`(🇹🇼 台湾 1|🇹🇼 台湾 2|台湾 test1|台湾 直连|🇺🇸 美国|🇯🇵 日本)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=🎮 Niantic`url-test`(🇹🇼 台湾 1|🇹🇼 台湾 2|台湾 test1|🇺🇸 美国|🇯🇵 日本)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=📹 油管视频`select`(ff7700d1)`[]♻️ ss`[]🎮 Niantic`[]🚀 节点选择`[]♻️ CloudFlare`[]♻️ 星辰`[]♻️ 自动选择
 custom_proxy_group=📱 Telegram`select`[]♻️ ss`[]🚀 节点选择`[]♻️ CloudFlare`[]♻️ 星辰`[]♻️ 自动选择
 custom_proxy_group=💬 OpenAi`select`(ff7700d1)`[]♻️ CloudFlare`[]♻️ 星辰`[]♻️ 自动选择
