--- a/mini.ini
+++ b/mini.ini
@@ -28,7 +28,7 @@ ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/refs
 ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 
-custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]♻️ ss`[]♻️ jp`[]🎮 Niantic`[]♻️ CloudFlare`[]♻️ 星辰`DIRECT`.*
+custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]♻️ ss`[]🎮 Niantic`[]♻️ CloudFlare`[]♻️ 星辰`DIRECT`.*
 custom_proxy_group=🎮 Niantic`url-test`(🇹🇼 台湾 1|🇹🇼 台湾 2|台湾 test1|1b301e07|🇺🇸 美国|🇯🇵 日本)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=📹 油管视频`select`(ff7700d1)`[]♻️ ss`[]🎮 Niantic`[]🚀 节点选择`[]♻️ CloudFlare`[]♻️ 星辰`[]♻️ 自动选择
 custom_proxy_group=📱 Telegram`select`[]♻️ ss`[]🚀 节点选择`[]♻️ CloudFlare`[]♻️ 星辰`[]♻️ 自动选择
@@ -39,8 +39,7 @@ custom_proxy_group=🛑 全球拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`[]♻️ ss`[]♻️ CloudFlare`[]♻️ 星辰
 custom_proxy_group=♻️ 星辰`url-test`(IEPL|直连|台湾|日本|美国)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=♻️ CloudFlare`url-test`(-HTTP-|-HTTPS-)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=♻️ ss`select`(ff7700d1)`
-custom_proxy_group=♻️ jp`select`(1b301e07)`
+custom_proxy_group=♻️ ss`select`(ff7700d1|1b301e07)`
 
 enable_rule_generator=true
 overwrite_original_rules=true
