--- a/j.ini
+++ b/j.ini
@@ -28,15 +28,19 @@ ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 
-custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🔯 故障转移`[]DIRECT`.*
-custom_proxy_group=💬 Ai平台`select`
-custom_proxy_group=📹 油管视频`select`
-custom_proxy_group=📲 电报消息`select`
+custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]♻️ 星辰`[]♻️ CloudFlare`[]♻️ ss`[]🔯 故障转移`[]DIRECT`.*
+custom_proxy_group=💬 Ai平台`select`[]♻️ 星辰`[]♻️ ss`.*
+custom_proxy_group=📹 油管视频`select`[]♻️ 星辰`[]♻️ CloudFlare`[]♻️ ss`(ff7700d1|1b301e07)`
+custom_proxy_group=📲 电报消息`select`[]♻️ 星辰`[]♻️ CloudFlare`[]♻️ ss`[]🚀 节点选择`[]♻️ 自动选择
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🔯 故障转移`fallback`.*`http://www.gstatic.com/generate_204`180
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
 custom_proxy_group=🛑 全球拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`[]🔯 故障转移`.*
+custom_proxy_group=♻️ 星辰`url-test`(台湾|美国)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=♻️ CloudFlare`url-test`(-HTTP-|-HTTPS-)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=♻️ ss`select`(ff7700d1|1b301e07)`
+
 
 enable_rule_generator=true
 overwrite_original_rules=true
