--- a/mf.ini
+++ b/mf.ini
@@ -34,7 +34,7 @@ custom_proxy_group=💬 Ai平台`select`(ff7700d1|1b301e07)`[]🚀 节点选择`
 custom_proxy_group=📹 油管视频`select`(ff7700d1|1b301e07)`[]🚀 节点选择`[]♻️ CloudFlare`[]♻️ 星辰`[]🔯 故障转移
 custom_proxy_group=📲 电报消息`select`(ff7700d1|1b301e07)`[]🚀 节点选择`[]♻️ CloudFlare`[]♻️ 星辰`[]🔯 故障转移
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🔯 故障转移`fallback`[]♻️ 星辰'.*`http://www.gstatic.com/generate_204`180
+custom_proxy_group=🔯 故障转移`fallback`[]♻️ 星辰`.*`http://www.gstatic.com/generate_204`180
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
 custom_proxy_group=🛑 全球拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=♻️ 星辰`url-test`(🇹🇼 台湾 1|🇹🇼 台湾 2|台湾 test1|🇺🇸 美国)`http://www.gstatic.com/generate_204`300
