--- a/mf.ini
+++ b/mf.ini
@@ -30,9 +30,9 @@ ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]♻️ ss`[]♻️ 星辰`[]♻️ CloudFlare`[]🔯 故障转移`[]DIRECT`.*
-custom_proxy_group=💬 Ai平台`select`(ff7700d1|1b301e07)`[]🚀 节点选择`[]♻️ CloudFlare`[]♻️ 星辰`[]🔯 故障转移
-custom_proxy_group=📹 油管视频`select`(ff7700d1|1b301e07)`[]🚀 节点选择`[]♻️ CloudFlare`[]♻️ 星辰`[]🔯 故障转移
-custom_proxy_group=📲 电报消息`select`(ff7700d1|1b301e07)`[]🚀 节点选择`[]♻️ CloudFlare`[]♻️ 星辰`[]🔯 故障转移
+custom_proxy_group=💬 Ai平台`select`(ff7700d1|1b301e07)`[]♻️ ss`[]🚀 节点选择`[]♻️ CloudFlare`[]♻️ 星辰`[]🔯 故障转移
+custom_proxy_group=📹 油管视频`select`(ff7700d1|1b301e07)`[]♻️ ss`[]🚀 节点选择`[]♻️ CloudFlare`[]♻️ 星辰`[]🔯 故障转移
+custom_proxy_group=📲 电报消息`select`(ff7700d1|1b301e07)`[]♻️ ss`[]🚀 节点选择`[]♻️ CloudFlare`[]♻️ 星辰`[]🔯 故障转移
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🔯 故障转移`fallback`[]♻️ 星辰`.*`http://www.gstatic.com/generate_204`180
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
